[package]
name = "json2ws"
version = "0.1.0"
edition = "2021"
authors = ["Fedele Cavaliere <cavaliere12.web@gmail.com>"]
description = "Broadcast HTTP JSON body via WebSocket"

[dependencies]
tokio = { version = "1.28", features = ["full"] }
warp = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures-util = "0.3"
tokio-stream = "0.1"
log = "0.4"
env_logger = "0.10"
clap = { version = "4.3", features = ["derive"] }
uuid = { version = "1.3", features = ["v4"] }
